fix(test): update DesignacionServiceTest with new dependencies